documentation for algae added

--- a/caerulean/whirlpool/Makefile
+++ b/caerulean/whirlpool/Makefile
@@ -17,9 +17,9 @@ help:
 	echo "\t\033[34mmake build-docker-test\033[0m: build Docker testing image."
 	echo "\t\033[34mmake build\033[0m: build whirlpool executable binary."
 	echo "\t\033[34mmake run\033[0m: run whirlpool executable locally."
-	echo "\t\033[34mmake run-docker\033[0m: run whirlpool executable in Docker container."
-	echo "\t\033[34mmake test\033[0m: run tests in Docker container."
-	echo "\t\033[34mmake lint\033[0m: run Go code linting in Docker container."
+	echo "\t\033[34mmake run-docker\033[0m: run whirlpool executable in a Docker container."
+	echo "\t\033[34mmake test\033[0m: run tests in a Docker container."
+	echo "\t\033[34mmake lint\033[0m: run Go code linting in a Docker container."
 	echo "\t\033[34mmake format\033[0m: run Go code formatting locally."
 	echo "\t\033[34mmake clean\033[0m: clean all the build files, executables, Docker images, containers and networks."
 	echo "\t\033[34mmake help\033[0m: print this message again."
