--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -28,11 +28,11 @@ pyroute2 = "^0.7.9"
 python-iptables = "^1.0.1"
 betterproto = "^2.0.0b6"
 pycryptodome = "^3.18.0"
-eciespy = "^0.4.1"
 
 [tool.poetry.group.devel.dependencies]
 pytest = "^7.3.1"
 pythonping = "^1.1.4"
+pytest-asyncio = "^0.23.5"
 pytest-timeout = "^2.2.0"
 pytest-dependency = "^0.5.1"
 
@@ -43,6 +43,7 @@ black = "^20.8b1"
 isort = "^5.11.0"
 pyinstaller = "^5.11.0"
 python-on-whales = "^0.65.0"
+grpcio-tools = "^1.62.0"
 betterproto = { version = "^2.0.0b6", extras = ["compiler"] }
 
 
