--- a/.dockerignore
+++ b/.dockerignore
@@ -5,6 +5,7 @@
 caerulean/whirlpool/build
 caerulean/whirlpool/generated
 caerulean/whirlpool/tests
+caerulean/whirlpool/scripts
 caerulean/whirlpool/Dockerfile.*
 caerulean/whirlpool/example.conf.env
 caerulean/whirlpool/go.sum
@@ -21,6 +22,7 @@ viridian/algae/*.spec
 viridian/algae/.pytest_cache
 viridian/algae/build
 viridian/algae/dist
+viridian/algae/docker/certificates
 viridian/algae/docker/compose.*.yml
 viridian/algae/docker/Dockerfile.*
 viridian/algae/docker/test.conf.env
