--- a/viridian/algae/docker/compose.local.yml
+++ b/viridian/algae/docker/compose.local.yml
@@ -72,6 +72,8 @@ services:
     environment:
       SEASIDE_ADDRESS: 10.87.65.87
       SEASIDE_EXTERNAL: 10.87.42.87
+    volumes:
+      - ./certificates:/seaside/caerulean/certificates
     networks:
       sea-rout-int:
         ipv4_address: 10.87.65.87
@@ -106,7 +108,7 @@ services:
     container_name: network-disruptor
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    command: "-l info netem -d 1h loss -p 50 seaside-internal-router seaside-external-router"
+    command: "-l info netem -d 1h loss -p 25 seaside-internal-router seaside-external-router"
     depends_on:
       int-router:
         condition: service_started
