--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,6 +80,7 @@ jobs:
           sudo apt-get install -y protobuf-compiler
           go install golang.org/x/lint/golint@latest
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
+          go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
 
       - name: Create Executable ID 📛
         id: id-creator
