--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -45,6 +45,7 @@ pyinstaller = "^5.11.0"
 python-on-whales = "^0.65.0"
 grpcio-tools = "^1.62.0"
 pyOpenSSL = "^24.0.0"
+types-pyOpenSSL = "^24.0.0.20240130"
 betterproto = { version = "^2.0.0b6", extras = ["compiler"] }
 
 
