--- a/caerulean/whirlpool/example.conf.env
+++ b/caerulean/whirlpool/example.conf.env
@@ -1,7 +1,7 @@
-# Whirlpool owner payload, provides access to privileged authorisation
+# Whirlpool owner payload value, provides access to privileged authorisation
 SEASIDE_PAYLOAD_OWNER=super_secret_owner_payload_data
-# Whirlpool user payload, provides access to network authorisation
-SEASIDE_PAYLOAD_VIRIDIAN=super_secret_user_payload_data
+# Whirlpool viridian payload value, provides access to network authorisation
+SEASIDE_PAYLOAD_VIRIDIAN=super_secret_viridian_payload_data
 
 # Seaside internal IP address, address the viridians will use to connect
 SEASIDE_ADDRESS=127.0.0.1
@@ -10,29 +10,24 @@ SEASIDE_EXTERNAL=127.0.0.1
 # Seaside control port for viridian encrypted TCP control packets (any, tailed)
 SEASIDE_CTRLPORT=8587
 
-# Privileged authorisation HTTP endpoint name
-SEASIDE_AUTH=auth
-
 # Maximum network viridian number (should be >= 0)
 SEASIDE_MAX_VIRIDIANS=10
 # Maximum privileged viridian number (should be >= 0)
 SEASIDE_MAX_ADMINS=5
-# Maximum total user number will be calculated as sum of the previous values
+# Maximum total viridian number will be calculated as sum of the previous values
 
-
+# Maximum additional waiting time for healthcheck message (will be added to the 'nextIn' value)
 SEASIDE_VIRIDIAN_WAITING_OVERTIME=5
-
+# Maximum waiting time for the first healthcheck message
 SEASIDE_VIRIDIAN_FIRST_HEALTHCHECK_DELAY=3
 
 # VPN tunnel interface MTU, if <= 0 then tunnel MTU will match external IP interface MTU
 SEASIDE_TUNNEL_MTU=1500
-# Limit of data transferred through sea port (kbytes per second per user)
+# Limit of data transferred through sea port (kbytes per second per viridian)
 SEASIDE_VPN_DATA_LIMIT=-1
-# Limit of control packets transferred through control port (packets per second per user)
-SEASIDE_CONTROL_PACKET_LIMIT=2
-# Limit of HTTP packets transferred through net port (packets per second per user)
-SEASIDE_HTTP_PACKET_LIMIT=3
-# Limit of ICMP (ping) packets transferred (packets per second per user)
+# Limit of control packets transferred through control port (packets per second per viridian)
+SEASIDE_CONTROL_PACKET_LIMIT=3
+# Limit of ICMP (ping) packets transferred (packets per second per viridian)
 SEASIDE_ICMP_PACKET_LIMIT=5
 # All firewall limit burst multiplier (during burst, limit is multiplied by this value)
 SEASIDE_BURST_LIMIT_MULTIPLIER=3
