--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Install Dependencies 🔮
         run: |
-          sudo apt-get install -y protobuf-compiler
+          sudo apt-get install -y --no-install-recommends protobuf-compiler
           go install golang.org/x/lint/golint@latest
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@latest
