--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -8,17 +8,21 @@ ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV DEBIAN_FRONTEND noninteractive
 
+# Set protoc version environment variables.
 ENV PROTOC_VERSION 24.4
 ENV PROTOC_ZIP protoc-$PROTOC_VERSION-linux-x86_64.zip
 
+# Download and install latest protoc compiler and python dependencies.
 RUN apt-get update && apt-get install -y --no-install-recommends python3-pip wget unzip && rm -rf /var/lib/apt/lists/*
 RUN wget -qO $PROTOC_ZIP https://github.com/protocolbuffers/protobuf/releases/download/v$PROTOC_VERSION/$PROTOC_ZIP && unzip -o $PROTOC_ZIP -d /usr/local bin/protoc && unzip -o $PROTOC_ZIP -d /usr/local 'include/*' && rm -f $PROTOC_ZIP
 RUN pip install --upgrade --no-cache-dir pip poetry && poetry self add poetry-plugin-export
 
+# Export dependencies from poetry to a `requirements.txt` file.
 COPY viridian/algae/pyproject.toml ./
 RUN poetry export -f requirements.txt --with client,devel --without-hashes --output requirements.txt
 RUN poetry install --without client,devel
 
+# Copy protobuf files and generate python code.
 COPY vessels ./vessels
 RUN mkdir generated && poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=generated vessels/*.proto
 
@@ -31,10 +35,12 @@ ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV DEBIAN_FRONTEND noninteractive
 
+# Install testing dependencies.
 RUN apt-get update && apt-get install -y --no-install-recommends build-essential iptables iproute2 iputils-ping python3-pip && rm -rf /var/lib/apt/lists/*
 COPY --from=builder /seaside/algae/requirements.txt ./
 RUN pip install --upgrade --no-cache-dir pip -r requirements.txt
 
+# Copy algae and test sources, also copy generated protobuf files.
 COPY --from=builder /seaside/algae/generated ./sources/generated/
 COPY viridian/algae/sources/*.py ./sources/
 COPY viridian/algae/tests/*.py ./tests/
@@ -49,11 +55,13 @@ ENV SEASIDE_MIN_HC_TIME 1
 ENV SEASIDE_MAX_HC_TIME 5
 ENV SEASIDE_CONNECTION_TIMEOUT 3
 
+# Just sleep - run nothing.
 ENTRYPOINT sleep infinity
 
 
 FROM default-sleeping as default
 
+# Run viridian algae in the background.
 ENTRYPOINT python3 -m sources.main $SEASIDE_PAYLOAD_OWNER -a $SEASIDE_ADDRESS -c $SEASIDE_CTRLPORT -t $SEASIDE_TUNNEL_NAME
 
 HEALTHCHECK --interval=1m --timeout=1s --retries=3 --start-period=10s --start-interval=3s CMD ls /sys/class/net | grep $SEASIDE_TUNNEL_NAME
@@ -64,11 +72,13 @@ FROM default-sleeping as smoke-sleeping
 ARG NETWORK_GATEWAY
 ENV ARG_NETWORK_GATEWAY $NETWORK_GATEWAY
 
+# Setup default route IP and sleep.
 ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY && sleep infinity
 
 
 FROM smoke-sleeping as smoke
 
+# Setup default route IP and run viridian algae in the background.
 ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY \
     && python3 -m sources.main $SEASIDE_PAYLOAD_OWNER -a $SEASIDE_ADDRESS -c $SEASIDE_CTRLPORT -t $SEASIDE_TUNNEL_NAME
 
