--- a/viridian/algae/docker/Dockerfile.echo
+++ b/viridian/algae/docker/Dockerfile.echo
@@ -10,6 +10,7 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV BUFFER_SIZE 8192
 ENV ECHO_PORT 5000
 
+# Copy and run echo server.
 COPY docker/echo_server.py ./
 ENTRYPOINT python3 echo_server.py
 
@@ -21,5 +22,6 @@ FROM seaside-echo-default as smoke
 ARG NETWORK_GATEWAY
 ENV ARG_NETWORK_GATEWAY $NETWORK_GATEWAY
 
+# Setup default route IP and run echo server.
 ENTRYPOINT ip route replace default via $ARG_NETWORK_GATEWAY && \
     python3 echo_server.py
