--- a/viridian/algae/docker/Dockerfile.router
+++ b/viridian/algae/docker/Dockerfile.router
@@ -5,7 +5,8 @@ FROM alpine:3.18 as smoke
 ARG RESTRICTED_ADDRESS=0.0.0.0
 ENV ARG_RESTRICTED_ADDRESS $RESTRICTED_ADDRESS
 
-RUN apk add --no-cache iptables iproute2-tc
+# Setup packet forwarding and sleep.
+RUN apk add --no-cache iptables
 ENTRYPOINT echo 1 > /proc/sys/net/ipv4/ip_forward && \
     iptables -t mangle -A PREROUTING -d $ARG_RESTRICTED_ADDRESS -j DROP && \
     iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE && \
