--- a/viridian/algae/docker/compose.base.yml
+++ b/viridian/algae/docker/compose.base.yml
@@ -1,3 +1,7 @@
+# This file defines basic Docker images for integration testing.
+# They will not be destroyed and recreated during tests - for speedup.
+# They are also reused in other Dockerfile targets in this directory.
+
 version: "3.9"
 
 services:
