--- a/viridian/algae/docker/compose.default.yml
+++ b/viridian/algae/docker/compose.default.yml
@@ -1,3 +1,8 @@
+# This file defines default Docker images for integration testing.
+# Unlike images from "base", these contain additional dependencies, settings, etc.
+# These images also will not be destroyed and recreated during tests - for speedup.
+# These images will also reused in other Dockerfile targets in this directory.
+
 version: "3.9"
 
 services:
