--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Dependencies 🔮
-        run: apt-get install shellcheck
+        run: sudo apt-get install shellcheck
 
       - name: Lint Shell Scripts 🧪
         run: make lint-scripts
