--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,20 +5,22 @@ on:
 #    tags:
 #      - "**"
 
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: false # ${{ github.ref != 'refs/heads/main' }}
-
 jobs:
   all-build:
     name: Build all artifacts
     uses: ./.github/workflows/build.yml
     secrets: inherit
+    concurrency:
+      group: BUILD-${{ github.ref }}
+      cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
   all-release-publish:
     name: Create release for all files
     runs-on: ubuntu-latest
     needs: all-build
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
 
     steps:
       - name: Download algae artifact
@@ -54,10 +56,13 @@ jobs:
   caerulean-whirlpool-deploy:
     name: Deploy caerulean whirlpool to a dedicated test server
     runs-on: ubuntu-latest
-  
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: ${{ github.ref != 'refs/heads/main' }}
+
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Deploy
         run: npm run --prefix .github/scripts deploy-whirlpool-beget
