--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: BUILD
 
 on:
   workflow_call:
-  #push:
-  #  branches:
-  #    - "**"
+  push:
+    branches:
+      - "**"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
