--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -53,12 +53,12 @@ betterproto = { version = "^2.0.0b6", extras = ["compiler"] }
 generate = "scripts.process:generate"
 lint = "scripts.codestyle:lint"
 format = "scripts.codestyle:format"
-test_unit = "scripts.test:test_unit"
-test_integration = "scripts.test:test_integration"
-test_smoke = "scripts.test:test_smoke"
-test_local = "scripts.test:test_local"
-test_remote = "scripts.test:test_remote"
-test_all = "scripts.test:test_all"
+test-unit = "scripts.test:test_unit"
+test-integration = "scripts.test:test_integration"
+test-smoke = "scripts.test:test_smoke"
+test-local = "scripts.test:test_local"
+test-remote = "scripts.test:test_remote"
+test-all = "scripts.test:test_all"
 compile = "scripts.process:compile"
 execute = "scripts.process:execute"
 clean = "scripts.process:clean"
