--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -75,4 +75,4 @@ jobs:
           BEGET_API_PASSWORD: ${{ secrets.BEGET_API_PASSWORD }}
           BEGET_SERVER_KEY: ${{ secrets.BEGET_SERVER_KEY }}
           WHIRLPOOL_PAYLOAD: ${{ secrets.WHIRLPOOL_DEPLOYMENT_PAYLOAD }}
-        run: npm run --prefix .github/scripts deploy-whirlpool-beget -v
+        run: npm run --prefix .github/scripts deploy-whirlpool-beget -- -v
