--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,8 +23,8 @@ jobs:
       packages: write
 
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v4
+      - name: Set up Docker Buildx 🫙
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry 🚪
         uses: docker/login-action@v3
@@ -51,6 +51,6 @@ jobs:
         with:
           file: ${{ matrix.root }}/Dockerfile
           target: default
-          push: ${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/releases') }}
+          push: ${{ github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/tags') }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
