algae docker image updated

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ viridian/algae/dist/
 
 ## Python generated files:
 viridian/algae/docker/certificates/
+viridian/algae/sources/__init__.py
 viridian/algae/sources/generated/
 
 
