--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -24,7 +24,7 @@ RUN poetry install --without client,devel
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN mkdir generated && poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=generated vessels/*.proto
+RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=sources vessels/*.proto
 
 
 FROM ubuntu:22.04 as default-sleeping
