--- a/viridian/algae/docker/Dockerfile.algae
+++ b/viridian/algae/docker/Dockerfile.algae
@@ -24,7 +24,7 @@ RUN poetry install --without client,devel
 
 # Copy protobuf files and generate python code.
 COPY vessels ./vessels
-RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=sources vessels/*.proto
+RUN poetry run python -m grpc_tools.protoc -I=vessels --python_betterproto_out=. vessels/*.proto
 
 
 FROM ubuntu:22.04 as default-sleeping
@@ -41,7 +41,7 @@ COPY --from=builder /seaside/algae/requirements.txt ./
 RUN pip install --upgrade --no-cache-dir pip -r requirements.txt
 
 # Copy algae and test sources, also copy generated protobuf files.
-COPY --from=builder /seaside/algae/generated ./sources/generated/
+COPY --from=builder /seaside/algae/ ./sources/
 COPY viridian/algae/sources/*.py ./sources/
 COPY viridian/algae/tests/*.py ./tests/
 RUN touch __init__.py sources/__init__.py
