--- a/viridian/submerged/Cargo.toml
+++ b/viridian/submerged/Cargo.toml
@@ -12,6 +12,8 @@ tonic = "0.11.0"
 prost-types = "0.12.4"
 dns-lookup = "2.0.4"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
+
+[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
 tun2 = { version = "1.3.0", features = ["async"] }
 
 [target.'cfg(target_os="linux")'.dependencies]
